Fix stars on mobile

--- a/assets/styles/noscript.scss
+++ b/assets/styles/noscript.scss
@@ -1,4 +1,4 @@
-.stars {
+#stars {
 	background: #000 url(../images/stars.svg) repeat top center;
 }
 .lead {
